RESOLVED FIXED266667
Fix compact allocators with heap identifiers when MALLOC_HEAP_BREAKDOWN is enabled
https://bugs.webkit.org/show_bug.cgi?id=266667
Summary Fix compact allocators with heap identifiers when MALLOC_HEAP_BREAKDOWN is en...
David Degazio
Reported 2023-12-19 15:42:29 PST
rdar://119891833 In https://bugs.webkit.org/show_bug.cgi?id=266080, we introduced alternate WTF allocation paths for types that can be stored in packed or compact pointers. One feature that change is missing, though, is adding implementations of custom heap identifiers when MALLOC_HEAP_BREAKDOWN is enabled, so currently enabling MALLOC_HEAP_BREAKDOWN will result in build errors. We should fix this.
Attachments
David Degazio
Comment 1 2023-12-19 15:51:03 PST
EWS
Comment 2 2023-12-20 11:18:19 PST
Committed 272360@main (4a3abb1f3160): <https://commits.webkit.org/272360@main> Reviewed commits have been landed. Closing PR #22072 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.