Source/WTF/wtf/WeakPtr.cpp
@@ -31,5 +31,6 @@
 namespace WTF {
 
 DEFINE_ALLOCATOR_WITH_HEAP_IDENTIFIER(WeakPtrImplBase);
+DEFINE_ALLOCATOR_WITH_HEAP_IDENTIFIER(WeakPtrImplBaseSingleThread);
 
 } // namespace WTF
